Fix gap between analysis items

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -72,39 +72,6 @@ h2 {
   font-size: large;
 }
 
-form {
-  display: flex;
-}
-
-.analyze-button {
-  background-color: #666;
-  color: #fff;
-  padding: 5px 10px;
-  align-self: end;
-  width: 150px;
-  border: 1px solid black;
-
-  &:hover {
-    background-color: transparent;
-    color: black;
-  }
-
-  &:disabled {
-    opacity: 0.24;
-    cursor: not-allowed;
-  }
-}
-
-/* .analyze-button:hover {
-  background-color: transparent;
-  color: black;
-} */
-
-/* .analyze-button:disabled {
-  opacity: 0.24;
-  cursor: not-allowed;
-} */
-
 .container {
   max-width: 800px;
   margin: 0 auto;
@@ -128,6 +95,33 @@ form {
   }
 }
 
+.button-container {
+  display: inline-flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.analyze-button,
+.empty-button {
+  background-color: #666;
+  color: #fff;
+  padding: 5px 10px;
+  width: 150px;
+  border: 1px solid black;
+
+  &:hover {
+    background-color: transparent;
+    color: black;
+  }
+
+  &:disabled {
+    opacity: 0.24;
+    cursor: not-allowed;
+    background-color: inherit;
+    color: inherit;
+  }
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -140,6 +134,7 @@ form {
 
   &.show {
     display: flex;
+    gap: 15px;
   }
 }
 
@@ -147,7 +142,7 @@ form {
   padding: 10px;
   border: 2px solid #333;
   background-color: #d1ffd1;
-  margin: 5px 0px;
+  gap: 50px;
   border-radius: 10px;
 }
 
